[package]
name = "sc-finality-grandpa"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Integration of the GRANDPA finality gadget into substrate."
documentation = "https://docs.rs/sc-finality-grandpa"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
derive_more = "0.99.2"
fork-tree = { version = "2.0.0-rc5" }
futures = "0.3.4"
futures-timer = "3.0.1"
log = "0.4.8"
parking_lot = "0.10.0"
rand = "0.7.2"
parity-scale-codec = { version = "1.3.4", features = ["derive"] }
sp-application-crypto = { version = "2.0.0-rc5" }
sp-arithmetic = { version = "2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5" }
sp-utils = { version = "2.0.0-rc5" }
sp-consensus = { version = "0.8.0-rc5" }
sc-consensus = { version = "0.8.0-rc5" }
sp-core = { version = "2.0.0-rc5" }
sp-keystore = { version = "0.8.0-rc5", path = '../keystore' }
sp-api = { version = "2.0.0-rc5" }
sc-telemetry = { version = "2.0.0-rc5" }
sc-keystore = { version = "2.0.0-rc5" }
serde_json = "1.0.41"
sc-client-api = { version = "2.0.0-rc5" }
sp-inherents = { version = "2.0.0-rc5" }
sp-blockchain = { version = "2.0.0-rc5" }
sc-network = { version = "0.8.0-rc5" }
sc-network-gossip = { version = "0.8.0-rc5" }
sp-finality-grandpa = { version = "2.0.0-rc5" }
sp-finality-tracker = { version = "2.0.0-rc5" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-rc5"}
sc-block-builder = { version = "0.8.0-rc5" }
finality-grandpa = { version = "0.12.3", features = ["derive-codec"] }
pin-project = "0.4.6"

[dev-dependencies]
assert_matches = "1.3.0"
finality-grandpa = { version = "0.12.3", features = ["derive-codec", "test-helpers"] }
sc-network = { version = "0.8.0-rc5" }
sp-keyring = { version = "2.0.0-rc5" }
sp-consensus-babe = { version = "0.8.0-rc5" }
sp-state-machine = { version = "0.8.0-rc5" }
sp-tracing = { version = "2.0.0-rc5" }
tokio = { version = "0.2", features = ["rt-core"] }
tempfile = "3.1.0"
sp-api = { version = "2.0.0-rc5" }
